<resources>
    <string name="app_name">Calculadora De Rendimento Academico</string>
    <string name="nota1">Nota 1:</string>
    <string name="nota2">"Nota 2: "</string>
    <string name="frequencia">"Frequência: "</string>
    <string name="notaExame">"Nota exame: "</string>
    <string name="media">"Média: "</string>
    <string name="mediaFinal">"Média Final: "</string>
    <string name="situacao">"Situação: "</string>
    <string name="tituloCalculadora">Calculadora de Rendimento Acâdemico</string>
</resources>